grammar.js
        source_file: $ => repeat($._top_level_statement),

        _top_level_statement: $ => choice(
            $.namespace,
            $.struct_definition,
            $.union_definition,
            $.bitfield_definition,
            $.enum_definition,
            $.variable_placement,
            $._statement,
            $._preproc_directive,
            $.using_definition,
            $.function_definition,
        ),

        namespace: $ => seq(
            'namespace',
            field('name', $.identifier),
            '{',
            repeat($._top_level_statement),
            '}'
        ),

        include: $=> seq(
            '#include',
            choice(
                $.string_literal,
                $.system_lib_string
            )
        ),

        system_lib_string: $ => (seq(
            '<',
            token(repeat(choice(/[^>\n]/, '\\>'))),
            '>'
        )),

        define: $ => seq(
            '#define',
            $.identifier, //TODO: Typealias?
            $._expression

        ),

        pragma: $ => seq(
            '#pragma',
            choice(
                $.pragma_endian,
                $.pragma_mime,
                $.pragma_base_address,
                $.pragma_eval_depth,
                $.pragma_array_limit,
                $.pragma_pattern_limit,
                $.pragma_once,
            ),
        ),

        pragma_endian: $=> seq('endian', field('value', $.endian_val)),

        endian_val: $=> token(choice('little', 'big', 'native')),

        pragma_mime: $=> seq('MIME', field('value', $.mime_type)),

        mime_type: $=> token( /[\w\-\.]+\/[\w\-\.]+/ ),

        pragma_base_address: $=> seq('base_address', field('value', $.number_literal)), // Only integer

        pragma_eval_depth: $=> seq('eval_depth', field('value', $.number_literal)), // Only integer

        pragma_array_limit: $=> seq('array_limit', field('value', $.number_literal)), // Only integer

        pragma_pattern_limit: $=> seq('pattern_limit', field('value', $.number_literal)), // Only integer

        pragma_once: $=> token('once'),

        struct_definition: $ => seq(
            'struct',
            field('name', $._identifier),
            field('body',$.field_list),
            $._declaration_finish
        ),

        union_definition: $ => seq(
            'union',
            field('name', $._identifier),
            field('body',$.field_list),
            $._declaration_finish
        ),

        bitfield_definition: $=> seq(
            'bitfield',
            field('name', $._identifier),
            field('body', $.bitfield_list),
            $._declaration_finish
        ),

        enum_definition: $=> seq(
            'enum',
            field('name', $.identifier),
            ':',
            field('type', $.primitive_type),
            field('body', $.enum_field_list)
        ),

        variable_definition: $ => seq(
            field('type', $._type),
            $._identifier_definition,
            optional($._array_size_wrapper),
            optional(seq('=', field('value', $._expression))),
            $._declaration_finish
        ),

        variable_placement: $ => seq(
            choice(
                seq(
                    field('type', $._type),
                    $._identifier_definition,// TODO, maybe only one identifier?
                    optional($._array_size_wrapper),
                ),
                field('type', $.pointer_type)
            ),
            '@',
            field('offset', $._offset),
            $._declaration_finish
        ),

        _offset: $ => choice(
            $._expression,
            // $.number_literal, //?
            // $._identifier,
        ),

        _assignation_expression: $ => seq(
            field('left', $._identifier),
            field('operator', choice('=', '+=', '-=')),
            field('right', $._expression),
        ),

        assignation_statement: $ => seq(
            $._assignation_expression,
            ';'
        ),

        _array_size_wrapper: $ => seq(
            '[',
            optional(field('size', $._array_size)),
            ']',
        ),

        _identifier_definition: $ => seq(
            repeat(seq(field('name', $._identifier), ',')),
            field('name', $._identifier),
        ),

        field_list: $ => seq(
            '{',
            repeat(choice($._statement, $.padding)),
            '}',
        ),

        bitfield_list: $ => seq(
            '{',
            repeat1(field('field', $.bitfield_entry)),
            '}',
        ),

        bitfield_entry: $=> seq(
            field('name', choice($.identifier, 'padding')),
            ':',
            field('value', $.number_literal),
            ';' // TODO: can have attributes? $._declaration_finish?
        ),

        enum_field_list: $=> seq(
            '{',
            field('field', $.enum_field),
            repeat(seq(',', field('field', $.enum_field))),
            '}',
            ';' // TODO: can have attributes? $._declaration_finish?
        ),
        enum_field: $=> seq(
            field('name', $.identifier),
            optional(seq('=', field('value', $.number_literal)))
        ),

        _declaration_finish: $ => seq(
            optional(field('attribute',$.attribute)), // TODO: Multiple attributes?
            ';'
        ),

        attribute: $ => seq(
            '[[',
            $._variable_attribute,
            ']]'
        ),

        _variable_attribute: $ => choice(
            seq(field('name','color'),'(',field('value',$.string_literal),')'),
            seq(field('name','name'),'(',field('value',$.string_literal),')'),
            seq(field('name','comment'),'(',field('value',$.string_literal),')'),
            seq(field('name','format'),'(',field('value',$.string_literal),')'),
            seq(field('name','transform'),'(',field('value',$.string_literal),')'),
            seq(field('name','pointer_base'),'(',field('value',$.string_literal),')'),
            seq(field('name','hidden')),
            seq(field('name','inline')),
            seq(field('name','no_unique_address')),
            seq(field('name','static')), // TODO: Separate this as type_attribute?
        ),

        _type: $ => choice(
            $._primitive_type,
            $._type_identifier,
            $.namespaced_type_identifier
        ),

        endian_indicator: $ => choice(
            'be',
            'le'
        ),

        primitive_type: $ => choice (
            'u8','u16','u32','u64','u128',
            's8','s16','s32','s64','s128',
            'float', 'double',
            'char', 'char16', 'bool', 'str', 'auto'
        ),

        block: $ => seq(
            '{',
            repeat($._statement),
            '}'
        ),

        _statement: $ => choice (
            $._definition_statement,
            $.if_statement,
            $.while_statement,
            $.for_statement,
            $._function_call_statement,
            $.return_statement,
            $.break_statement,
            $.continue_statement,
            $._pointer_statement, // only in structs and unions
        ),

        return_statement: $ => seq(
            'return',
            $._expression,
            ';'
        ),

        _expression: $ => choice(
            $._identifier,
            $._number,
            $._operator,
            $.string_literal,
            $.character_literal,
            $.boolean_literal,
            $.field_expression,
            $._function_call,
            $.type_operator,
            $.casting_operator,
            $.loop_size, // TODO: Maybe not
        ),

        namespaced_identifier: $ => seq(
            field('namespace', $.identifier),
            '::',
            field('name', $._identifier)
        ),

        namespaced_type_identifier: $ => seq(
            field('namespace', $.identifier),
            '::',
            field('type', $._type)
        ),

        namespaced_function_call: $ => seq(
            field('namespace', $.identifier),
            '::',
            field('call', $._function_call)
        ),

        _identifier: $ => choice(
            $.identifier,
            $.namespaced_identifier,
            $.dollar,
        ),

        identifier: $ => /[a-zA-Z_]\w*/,

        _field_identifier: $ => alias($.identifier, $.field_identifier),

        field_expression: $=> prec.left(1,seq(
            field('parent', choice($.identifier, $.parent, $.this)),
            repeat1(seq(
                '.',
                field('field', $._field_identifier),
                optional(field('size', $._array_size_wrapper)),

            )),
        )),

        number_literal: $ => token(choice(
            /-?\d+/, //int
            /\d+U/, //int
            /-?0x[0-9a-fA-F]+/, // Hex
            /-?0b[01]+/, // Binary
            /-?0o[0-7]+/, // Octal
            /-?\d+(.\d+)?[DF]?/ // Float/Double
        )),

        unary_numeric_operator: $ => prec(PREC.UNARY, choice(
            seq('~', $._expression),
            seq('!', $._expression),
            seq('(', $._expression, ')'),
        )),

        binary_numeric_operator: $ => {
            const table = [
            ['+', PREC.ADD],
            ['-', PREC.ADD],
            ['*', PREC.MULT],
            ['/', PREC.MULT],
            ['%', PREC.MULT],
            ['>>', PREC.SHIFT],
            ['<<', PREC.SHIFT],
            ['&', PREC.BITWISE_AND],
            ['|', PREC.BITWISE_OR],
            ['^', PREC.BITWISE_XOR],
            ['==', PREC.EQ],
            ['!=', PREC.EQ],
            ['>', PREC.EQ],
            ['<', PREC.EQ],
            ['>=', PREC.EQ],
            ['<=', PREC.EQ],
            ['&&', PREC.AND],
            ['||', PREC.OR],
            ['^^', PREC.XOR]
            ];
            // ...
            return choice(...table.map(([operator, precedence]) => {
                return prec.left(precedence, seq(
                    field('left', $._expression),
                    field('operator', operator),
                    field('right', $._expression)
                ))
            }));
        },

        ternary_numeric_operator: $ => prec.left(PREC.TERNARY, seq(
            field('cond', $._expression),
            '?',
            field('iftrue', $._expression),
            ':',
            field('iffalse', $._expression),
        )),

        _condition: $=> seq(
            '(',
            field('condition', $._expression),
            ')',
        ),

        if_statement: $=> prec.left(1, seq(
            'if',
            $._condition,
            field('body', choice($.block, $._statement)),
            optional(seq(
                'else',
                field('else', choice($.block, $._statement))
            ))
        )),

        break_statement: $=> seq('break', ';'),

        continue_statement: $=> seq('continue', ';'),

        _while_head: $=> seq('while', $._condition),

        while_statement: $=> seq(
            $._while_head,
            field('body', choice($.block, $._statement)),
        ),

        _function_call: $ => choice(
            $.function_call,
            $.namespaced_function_call
        ),

        function_call: $=> seq(
            field('name', $.identifier),
            '(',
            optional(field('parameters', $.function_call_parameters)),
            ')'
        ),

        function_call_parameters: $=> seq(
            field('parameter', $._expression),
            repeat(seq(',', field('parameter', $._expression)))
        ),

        function_definition: $=> seq(
            'fn',
            field('name', $.identifier),
            field('parameters', $.parameters_definition),
            field('block', choice($.block, $._statement)),
            ';'
        ),

        parameters_definition: $=> seq(
            '(',
            optional(choice(
                seq(
                    field('parameter', $.parameter_definition),
                    repeat(seq(',', field('parameter',$.parameter_definition))),
                    optional(seq(',', field('pack', $.parameter_pack))),
                ),
                field('pack', $.parameter_pack),
            )),
            ')'
        ),

        parameter_definition: $=> seq(
            field('type', $._type),
            field('name', $._identifier),
        ),

        parameter_pack: $=> seq(
            field('type', $._type),
            '...',
            field('name', $._identifier)
        ),

        //https://github.com/tree-sitter/tree-sitter-c/blob/master/grammar.js
        string_literal: $ => seq(
            '"',
            repeat(choice(
                token.immediate(prec(1, /[^\\"\n]+/)),
                $.escape_sequence
            )),
            '"',
        ),

        character_literal: $=> seq(
            '\'',
            optional(choice(
                $.escape_sequence,
                token.immediate(/[^\n']/)
            )),
            '\''
        ),

        boolean_literal: $=> token(prec(1,choice(
            'true',
            'false'
        ))),

        escape_sequence: $ => token(prec(1, seq(
            '\\',
            choice(
                /[^xuU]/,
                /\d{2,3}/,
                /x[0-9a-fA-F]{2,}/,
                /u[0-9a-fA-F]{4}/,
                /U[0-9a-fA-F]{8}/
            )
        ))),
